# quant-lab

./: .gitignore  .okx_demo_env.example  README.md  pyproject.toml
configs/: default.toml  example.toml
docs/: ROADMAP.md  codex-discussion.md  deep-dive-discussion.md  quant-lab-strategy-intro.md  quant-lab-usage.md
src/crypto_quant_lab/: __main__.py  cli.py  config.py  domain.py
src/crypto_quant_lab/backtest/: __init__.py  runner.py
src/crypto_quant_lab/exchanges/: ccxt_adapter.py  factory.py
src/crypto_quant_lab/risk/: __init__.py  manager.py
tests/: test_backtest.py  test_backtest_validation.py  test_cli_account_info.py  test_cli_walk_forward_and_paper.py  test_config.py  test_exchange_metadata.py  test_instruments.py  test_okx_account_inspection.py  test_okx_paper_trading.py  test_okx_proxy_env.py  test_proxy_injection.py  test_walk_forward.py
