[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
dependencies = [
  "ccxt>=4.4.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
]
description = "A starter crypto quant research and execution scaffold."
name = "crypto-quant-lab"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
quant-lab = "crypto_quant_lab.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
